# openapi-spec.yml
@@ -20,13 +20,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Invocation'
-  /status/{build_id}:
+                $ref: '#/components/schemas/BuildingStarted'
+  /status/{invocation_id}:
     get:
       summary: check status
       operationId: get_status
       parameters:
-      - name: build_id
+      - name: invocation_id
         in: path
         description: Id of image-building Invocation
         required: true
@@ -118,33 +118,46 @@ components:
         base:
           type: string
           description: desired base image to build on
+    BuildingStarted:
+      description: Object with invocation_id
+      type: object
+      required:
+        - invocation_id
+      properties:
+        invocation_id:
+          description: Id of image-building job
+          type: string
+          format: uuid
     Invocation:
       description: An invocation of image builder.
       type: object
       required:
-        - job_id
+        - invocation_id
         - state
-        - timestamp
+        - timestamp_submission
       properties:
-        job_id:
+        invocation_id:
           description: Id of image-building job
           type: string
           format: uuid
         state:
           $ref: "#/components/schemas/InvocationState"
-        timestamp:
-          description: An ISO8601 timestamp of the invocation.
+        timestamp_submission:
+          description: An ISO8601 timestamp of submission of invocation.
           type: string
+          format: date-time
+        timestamp_start:
+          description: An ISO8601 timestamp of start of image-building
+          type: string
+          format: date-time
+        timestamp_end:
+          description: An ISO8601 timestamp of end of image-building
+          type: string
+          format: date-time
         build_params:
           $ref: "#/components/schemas/BuildParams"
-        exception:
-          description: An internal image-building error that occurred during the operation.
-          type: string
-        stdout:
-          description: image-building console output.
-          type: string
-        stderr:
-          description: image-building error output.
+        response:
+          description: Stactrace in case of failure
           type: string
     InvocationState:
       type: string
