# src/image_builder/api/controllers/default_controller.py
@@ -3,7 +3,7 @@ import json
 import connexion
 
 from image_builder.api.log import get_logger
-from image_builder.api.openapi.models.build_params import BuildParams
+from image_builder.api.openapi.models import BuildParams, Invocation, BuildingStarted
 from image_builder.api.openapi.models.invocation import Invocation
 from image_builder.api.service.invocation_service import InvocationService
 
@@ -11,27 +11,30 @@ logger = get_logger(__name__)
 invocation_service = InvocationService()
 
 
-def get_status(build_id):
+def get_status(invocation_id):
     """check status
 
-    :param build_id: Id of image-building Invocation
-    :type build_id: str
+    :param invocation_id: Id of image-building Invocation
+    :type invocation_id: str
 
     :rtype: Invocation
     """
-    inv = invocation_service.load_invocation(build_id)
+    logger.debug(f"Checking status for invocation with ID {invocation_id}")
+    inv = invocation_service.load_invocation(invocation_id)
+    if not inv:
+        return f"Invocation with ID {invocation_id} not found", 404
     return inv, 200
 
 
 def post_build():
     """Request building image
 
-     # noqa: E501
-
     :rtype: Invocation
     """
     build_params = BuildParams.from_dict(connexion.request.get_json())
 
-    logger.info(json.dumps(build_params.to_dict(), indent=2))
+    logger.debug(json.dumps(build_params.to_dict(), indent=2))
 
-    return invocation_service.invoke(build_params), 202
+    inv = invocation_service.invoke(build_params)
+
+    return BuildingStarted(inv.invocation_id), 202
